tested all api's using postman and added caching
